# fission-yields-data

./: .gitignore  Cargo.toml  README.md
examples/serde_chatgpt_5/: main.rs
examples/serde_experiment/: README.md  main.rs
src/: half_life_branching_ratio_nndc_nudat_data_export.csv  half_life_branching_ratio_nndc_nudat_data_export.ods  lib.rs  nndc_nudat_data_export.csv  nndc_nudat_data_export.ods  nndc_nudat_z_n_and_mass_excess.csv  prelude.rs
src/endf_8_openmc_depletion_data/: README.md
src/endf_8_parent_independent_yields/: mod.rs
src/endf_8_parent_independent_yields/energy_interpolation/: mod.rs
src/endf_8_parent_independent_yields/np237/: mod.rs  np237_table.csv
src/endf_8_parent_independent_yields/np238/: mod.rs  np238_fast_table.csv  np238_fast_table_formatted.csv
src/endf_8_parent_independent_yields/nuclides/: excited_state.rs  mass_excess.rs  mass_yields.rs  mod.rs  string_conversion.rs  zaid_number.rs
src/endf_8_parent_independent_yields/pa231/: mod.rs  pa231_table.csv  pa231_table_values_only.csv
src/endf_8_parent_independent_yields/pu238/: mod.rs  pu238_fast_table.csv  pu238_fast_table_formatted.csv
src/endf_8_parent_independent_yields/pu239/: mod.rs  pu239_table.csv
src/endf_8_parent_independent_yields/pu240/: mod.rs  pu240_table.csv
src/tutorials_and_tests/: Pu239_mass_number_distribution_thermal.csv  linear_interpolation_examples.rs  mass_distributions.rs  mass_distributions_500_kev_spectrum.rs  mass_distributions_thermal_spectrum.rs  mod.rs  u233_mass_number_distribution_thermal.csv  u235_mass_number_distribution.csv
(+98 files in other folders)
