[package]
name = "fission-yields-data"
version = "0.1.2"
edition = "2024"

license = "GPL-3.0"
description = "Fission Yield Data for some nuclides"
homepage = "https://github.com/theodoreOnzGit/fission-yields-data"
repository ="https://github.com/theodoreOnzGit/fission-yields-data"
readme = "README.md"
categories = ["science"]

[dependencies]
uom = "0.37.0"
strum = "0.26"
strum_macros = "0.26"

[dev-dependencies]
approx = "0.5.1"
serde = {version = "1.0.228",  features = ["derive"]}
serde-xml-rs = "0.8.2"

[[example]]
name = "serde_experiment"


[[example]]
name = "serde_chatgpt_5"
